# xCRG

./: .gitignore  README.md  pyproject.toml
src/xcrg/: __init__.py  config.py  runner.py
src/xcrg/resources/: __init__.py
tests/: test_runner.py
