[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catrax-xcrg"
version = "0.1.0"
description = "Reusable xCRG MVP2 TRAPI response generation."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Translator CATRAX" }
]
dependencies = [
  "httpx~=0.28",
  "bmt>=1.4.6"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Translator-CATRAX/xCRG"
Issues = "https://github.com/Translator-CATRAX/xCRG/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"xcrg.resources" = ["*.json"]
